--- a/penguin-tauri/Cargo.toml
+++ b/penguin-tauri/Cargo.toml
@@ -13,6 +13,7 @@ edition = "2021"
 tauri-build = { version = "1.1", features = [] }
 
 [dependencies]
+penguin = { path = "../" }
 #tauri
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
