--- a/penguin-tauri/Cargo.toml
+++ b/penguin-tauri/Cargo.toml
@@ -19,12 +19,21 @@ serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 tauri = { version = "1.2", features = ["api-all"] }
 
+#tokio
+tokio = { version = "1", features = ["full"] }
+
 #bytes
 bytes = "1"
 
 #错误处理
 thiserror = "1"
 anyhow = "1"
+
+#日志
+tracing = "0.1"
+tracing-subscriber = "0.3.0"
+
+
 [features]
 # by default Tauri runs in production mode
 # when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
