--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,12 @@ tokio = { version = "1", features = ["full"] }
 
 tracing = "0.1"
 
+#base64
+base64 = "0.13"
+
+#随机
+rand = "0.8"
+
 [dev-dependencies]
 tracing-subscriber = "0.3.0"
 [workspace]
