--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,13 +7,14 @@ edition = "2021"
 
 [dependencies]
 ricq = { git = "https://github.com/lz1998/ricq" }
+ricq-core = { git = "https://github.com/lz1998/ricq" }
 #错误处理
 thiserror = "1"
 #bytes
 bytes = "1"
 #serde
+serde = "1"
 serde_json = "1"
-
 #异步
 tokio = { version = "1", features = ["full"] }
 
