--- a/penguin-tauri/Cargo.toml
+++ b/penguin-tauri/Cargo.toml
@@ -17,7 +17,7 @@ penguin = { path = "../" }
 #tauri
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.2", features = ["api-all"] }
+tauri = { version = "1.2", features = ["api-all", "devtools"] }
 
 #tokio
 tokio = { version = "1", features = ["full"] }
