--- a/penguin-tauri/Cargo.toml
+++ b/penguin-tauri/Cargo.toml
@@ -17,7 +17,7 @@ penguin = { path = "../" }
 #tauri
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.2", features = ["api-all", "devtools"] }
+tauri = { version = "1.2", features = [] }
 
 #tokio
 tokio = { version = "1", features = ["full"] }
@@ -33,6 +33,12 @@ anyhow = "1"
 tracing = "0.1"
 tracing-subscriber = "0.3.0"
 
+[profile.release]
+strip = true
+opt-level = "z"
+lto = true
+codegen-units = 1
+panic = "abort"
 
 [features]
 # by default Tauri runs in production mode
