--- a/penguin-tauri/Cargo.toml
+++ b/penguin-tauri/Cargo.toml
@@ -14,6 +14,7 @@ tauri-build = { version = "1.1", features = [] }
 
 [dependencies]
 penguin = { path = "../" }
+ricq_client = { path = "../ricq_client" }
 #tauri
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
@@ -32,13 +33,6 @@ anyhow = "1"
 #日志
 tracing = "0.1"
 tracing-subscriber = "0.3.0"
-
-[profile.release]
-strip = true
-opt-level = "z"
-lto = true
-codegen-units = 1
-panic = "abort"
 
 [features]
 # by default Tauri runs in production mode
